Added new clear function-calls for the recent-stored-events and as well the permanent-block list

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -62,6 +62,9 @@
   "logs.overview.total_events": "Gespeicherte Ereignisse gesamt",
   "logs.overview.per_server": "Ereignisse pro Server",
   "logs.overview.recent_events_title": "Letzte gespeicherte Ereignisse",
+  "logs.overview.clear_events": "Leeren",
+  "logs.overview.clear_events_confirm": "Damit werden alle gespeicherten Ban-Ereignisse unwiderruflich gelöscht. Statistiken, Insights und der gesamte Ereignisverlauf werden auf Null zurückgesetzt.\n\nDiese Aktion kann nicht rückgängig gemacht werden. Fortfahren?",
+  "logs.overview.clear_events_success": "Alle gespeicherten Ereignisse gelöscht.",
   "logs.overview.recent_empty": "Keine gespeicherten Ereignisse gefunden.",
   "logs.overview.empty": "Es wurden noch keine Sperr-Ereignisse protokolliert.",
   "logs.overview.open_insights": "Insights öffnen",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Alias-Name",
   "settings.advanced.opnsense.skip_tls": "TLS-Validierung überspringen (Self-Signed)",
   "settings.advanced.log_title": "Log der permanenten Sperren",
+  "settings.advanced.clear_log": "Leeren",
+  "settings.advanced.clear_log_confirm": "Damit wird das gesamte Sperrprotokoll unwiderruflich gelöscht. Fail2ban UI geht danach davon aus, dass keine IPs auf der externen Firewall gesperrt sind.\n\nDiese Aktion kann nicht rückgängig gemacht werden. Fortfahren?",
+  "settings.advanced.clear_log_success": "Permanentes Sperrprotokoll geleert.",
   "settings.advanced.log_empty": "Noch keine permanenten Sperren vorhanden.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Integration",
