--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -51,17 +51,20 @@
   "dashboard.manual_block.confirm": "IP {ip} im Jail {jail} sperre?",
   "dashboard.manual_block.success": "IP erfolgriich g'sperrt",
   "dashboard.manual_block.error": "Fehler bim Sperre vo dr IP",
-  "dashboard.manual_block.jail_required": "Bitte wähl es Jail us",
+  "dashboard.manual_block.jail_required": "Bitte wähu es Jail us",
   "dashboard.manual_block.ip_required": "Bitte gib e IP-Adrässe ii",
   "dashboard.manual_block.invalid_ip": "Bitte gib e gültigi IP-Adrässe ii",
   "dashboard.banned.show_more": "Meh azeige",
   "dashboard.banned.show_less": "Weniger azeige",
   "logs.overview.title": "Generelli Log-Übersicht",
-  "logs.overview.subtitle": "Vom Fail2ban-UI gspeichereti Ereigniss über alli Connectorä.",
+  "logs.overview.subtitle": "Vom Fail2ban-UI gspeichereti Ereigniss über aui Connectorä.",
   "logs.overview.refresh": "Date aktualisiere",
   "logs.overview.total_events": "Total gspeichereti Ereigniss",
   "logs.overview.per_server": "Ereigniss pro Server",
   "logs.overview.recent_events_title": "Letschti gspeichereti Ereigniss",
+  "logs.overview.clear_events": "Lääre",
+  "logs.overview.clear_events_confirm": "Damit wärde aui gspeicherete Ban-Ereigniss unwiderueflich glöscht. Statistike, Insights und de ganz Ereignisverlauf wärded uf Null zrugggsetzt.\n\nDas chan nöd rückgängig gmacht werde. Wiiterfahre?",
+  "logs.overview.clear_events_success": "Aui gspeicherete Ereigniss glöscht.",
   "logs.overview.recent_empty": "No keni gspeichereti Ereigniss gfunde.",
   "logs.overview.empty": "No keni Sperr-Ereigniss protokolliert.",
   "logs.overview.open_insights": "Insights azeige",
@@ -85,7 +88,7 @@
   "logs.search.label": "Ereigniss sueche",
   "logs.search.placeholder": "IP, Jail oder Server sueche",
   "logs.search.country_label": "Land",
-  "logs.search.country_all": "Alli Länder",
+  "logs.search.country_all": "Aui Länder",
   "logs.search.country_unknown": "Unbekannt",
   "logs.badge.recurring": "Widerkehrend",
   "logs.modal.whois_title": "Whois-Informatione",
@@ -170,11 +173,11 @@
   "settings.send_test_email": "Test-Email schicke",
   "settings.send_test_email_hint": "⚠️ Bitte speichere zersch dini SMTP-Iistellige, bevor du e Test-Email schicksch.",
   "settings.fail2ban": "Globale Standard-Fail2Ban-Konfiguratione",
-  "settings.fail2ban.description": "Die Einstellige werde uf alli aktivierte Fail2Ban-Server aagwändet und i däre jail.local [DEFAULT]-Abschnitt gspeicheret.",
+  "settings.fail2ban.description": "Die Einstellige werde uf aui aktivierte Fail2Ban-Server aagwändet und i däre jail.local [DEFAULT]-Abschnitt gspeicheret.",
   "settings.enable_bantime_increment": "Bantime-Inkrement aktivierä",
   "settings.enable_bantime_increment.description": "Wenn uf true gsetzt, wird d Bantime nach dr Formle: bantime = findtime * (Aazahl vo de Fähler / maxretry) * (1 + bantime.rndtime) berechnet.",
   "settings.default_jail_enable": "Jails standardmässig aktivieren",
-  "settings.default_jail_enable.description": "Wenn aktiviert, werde alli Jails standardmässig aktiviert. Wenn deaktiviert, mues jedes Jails explizit aktiviert werde.",
+  "settings.default_jail_enable.description": "Wenn aktiviert, werde aui Jails standardmässig aktiviert. Wenn deaktiviert, mues jedes Jails explizit aktiviert werde.",
   "settings.default_bantime": "Standard-Bantime",
   "settings.default_bantime.description": "D Aazahl vo de Sekunde, wo ä Host gsperrt wird. Zytformat: 1m = 1 Minute, 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monet, 1y = 1 Jahr.",
   "settings.default_bantime_placeholder": "z.B. 48h",
@@ -185,7 +188,7 @@
   "settings.default_chain.description": "iptables/nftables-Chain für Bans (z.B. INPUT für Host, DOCKER-USER für Docker-Container).",
   "settings.chain_help_title": "Standard-Chain",
   "settings.chain_docker_user": "DOCKER-USER",
-  "settings.chain_help_docker_user": "Für Aawändige i Docker. Bans gäute für alli Container uf em Host.",
+  "settings.chain_help_docker_user": "Für Aawändige i Docker. Bans gäute für aui Container uf em Host.",
   "settings.chain_input": "INPUT",
   "settings.chain_help_input": "Für Aawändige uf em Host. Bans gäute nur für s Host-Netz, nid für Docker-Netz.",
   "settings.chain_forward": "FORWARD",
@@ -193,7 +196,7 @@
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Standard-Sperraktione (z.B. nftables-multiport, nftables-allports, firewallcmd-rich-rules, etc). Wird brucht, zum action_* Variablen z definiere.",
   "settings.banaction_allports": "Banaction Allports",
-  "settings.banaction_allports.description": "Sperraktione für alli Ports (z.B. nftables-allports, firewallcmd-allports, etc). Wird brucht, wänn ä Jail alli Ports statt spezifischi Ports sperre muess.",
+  "settings.banaction_allports.description": "Sperraktione für aui Ports (z.B. nftables-allports, firewallcmd-allports, etc). Wird brucht, wänn ä Jail aui Ports statt spezifischi Ports sperre muess.",
   "settings.default_findtime": "Standard-Findtime",
   "settings.default_findtime.description": "Ä Host wird gsperrt, wenn er i de letschte 'findtime' Sekunde 'maxretry' Fähler generiert het. Zytformat: 1m = 1 Minute, 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monet, 1y = 1 Jahr.",
   "settings.default_findtime_placeholder": "z.B. 30m",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Alias-Name",
   "settings.advanced.opnsense.skip_tls": "TLS-Prüfig überspringe (Self-Signed)",
   "settings.advanced.log_title": "Permanent gsperrti IPs",
+  "settings.advanced.clear_log": "Leere",
+  "settings.advanced.clear_log_confirm": "Damit wird s ganze Sperrprotokoll unwiderueflich glöscht. Fail2ban UI gaht denn dervo uus, dass kei IPs uf de externe Firewall gsperrt sind.\n\nDas chan nöd rückgängig gmacht werde. Wiiterfahre?",
+  "settings.advanced.clear_log_success": "Permanents Sperrprotokoll gleert.",
   "settings.advanced.log_empty": "No ke permanenti Sperrig erfasst.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Integration",
@@ -391,7 +397,7 @@
   "lotr.email.title": "E dunkle Diener isch verbannt worde",
   "lotr.email.intro": "D Wächter vo Mittelerde hei e Bedrohig erkannt und us dim Riich verbannt.",
   "lotr.email.you_shall_not_pass": "DU DARFSCH NID VERBII",
-  "lotr.email.footer": "Möge d Server gschützt si. E Bann, um si alli z beherrsche.",
+  "lotr.email.footer": "Möge d Server gschützt si. E Bann, um si aui z beherrsche.",
   "lotr.email.details.dark_servant_location": "Dr Ort vom garstige Ork",
   "lotr.email.details.realm_protection": "S Riich vom Schutz",
   "lotr.email.details.origins": "Herkunft us de",
