--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -62,6 +62,9 @@
   "logs.overview.total_events": "Total stored events",
   "logs.overview.per_server": "Events per server",
   "logs.overview.recent_events_title": "Recent stored events",
+  "logs.overview.clear_events": "Clear",
+  "logs.overview.clear_events_confirm": "This will permanently delete all stored ban events. Statistics, insights, and the event history will be reset to zero.\n\nThis action cannot be undone. Continue?",
+  "logs.overview.clear_events_success": "All stored ban events cleared.",
   "logs.overview.recent_empty": "No stored events found.",
   "logs.overview.empty": "No ban events recorded yet.",
   "logs.overview.open_insights": "Open insights",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Alias Name",
   "settings.advanced.opnsense.skip_tls": "Skip TLS verification (self-signed)",
   "settings.advanced.log_title": "Permanent Block Log",
+  "settings.advanced.clear_log": "Clear",
+  "settings.advanced.clear_log_confirm": "This will permanently delete the entire block log. Fail2ban UI will assume that no IPs are currently blocked on the external firewall.\n\nThis action cannot be undone. Continue?",
+  "settings.advanced.clear_log_success": "Permanent block log cleared.",
   "settings.advanced.log_empty": "No permanent blocks recorded yet.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Integration",
