--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -62,6 +62,9 @@
   "logs.overview.total_events": "Eventos almacenados totales",
   "logs.overview.per_server": "Eventos por servidor",
   "logs.overview.recent_events_title": "Eventos almacenados recientes",
+  "logs.overview.clear_events": "Vaciar",
+  "logs.overview.clear_events_confirm": "Esto eliminará permanentemente todos los eventos de baneo almacenados. Las estadísticas, los análisis y el historial de eventos se restablecerán a cero.\n\nEsta acción no se puede deshacer. ¿Continuar?",
+  "logs.overview.clear_events_success": "Todos los eventos almacenados han sido eliminados.",
   "logs.overview.recent_empty": "No se encontraron eventos almacenados.",
   "logs.overview.empty": "Aún no se han registrado eventos de bloqueo.",
   "logs.overview.open_insights": "Abrir estadísticas",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Nombre del alias",
   "settings.advanced.opnsense.skip_tls": "Omitir verificación TLS (autofirmado)",
   "settings.advanced.log_title": "Registro de bloqueos permanentes",
+  "settings.advanced.clear_log": "Vaciar",
+  "settings.advanced.clear_log_confirm": "Esto eliminará permanentemente todo el registro de bloqueos. Fail2ban UI asumirá que no hay IPs bloqueadas actualmente en el firewall externo.\n\nEsta acción no se puede deshacer. ¿Continuar?",
+  "settings.advanced.clear_log_success": "Registro de bloqueos permanentes vaciado.",
   "settings.advanced.log_empty": "Aún no hay bloqueos permanentes.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Integración",
