--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -62,6 +62,9 @@
   "logs.overview.total_events": "Total d'événements enregistrés",
   "logs.overview.per_server": "Événements par serveur",
   "logs.overview.recent_events_title": "Événements enregistrés récents",
+  "logs.overview.clear_events": "Vider",
+  "logs.overview.clear_events_confirm": "Ceci supprimera définitivement tous les événements de bannissement stockés. Les statistiques, les aperçus et l'historique seront remis à zéro.\n\nCette action est irréversible. Continuer ?",
+  "logs.overview.clear_events_success": "Tous les événements stockés ont été supprimés.",
   "logs.overview.recent_empty": "Aucun événement stocké trouvé.",
   "logs.overview.empty": "Aucun événement de blocage n'a encore été enregistré.",
   "logs.overview.open_insights": "Ouvrir les insights",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Nom d'alias",
   "settings.advanced.opnsense.skip_tls": "Ignorer la vérification TLS (auto-signé)",
   "settings.advanced.log_title": "Journal des blocages permanents",
+  "settings.advanced.clear_log": "Vider",
+  "settings.advanced.clear_log_confirm": "Ceci supprimera définitivement tout le journal de blocage. Fail2ban UI considérera qu'aucune IP n'est actuellement bloquée sur le pare-feu externe.\n\nCette action est irréversible. Continuer ?",
+  "settings.advanced.clear_log_success": "Journal des blocages permanents vidé.",
   "settings.advanced.log_empty": "Aucun blocage permanent pour le moment.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Intégration",
