--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -62,6 +62,9 @@
   "logs.overview.total_events": "Eventi memorizzati totali",
   "logs.overview.per_server": "Eventi per server",
   "logs.overview.recent_events_title": "Eventi memorizzati recenti",
+  "logs.overview.clear_events": "Svuota",
+  "logs.overview.clear_events_confirm": "Questo eliminerà definitivamente tutti gli eventi di ban memorizzati. Le statistiche, gli approfondimenti e la cronologia degli eventi verranno azzerati.\n\nQuesta azione non può essere annullata. Continuare?",
+  "logs.overview.clear_events_success": "Tutti gli eventi memorizzati sono stati eliminati.",
   "logs.overview.recent_empty": "Nessun evento memorizzato trovato.",
   "logs.overview.empty": "Nessun evento di blocco è stato ancora registrato.",
   "logs.overview.open_insights": "Apri insights",
@@ -247,6 +250,9 @@
   "settings.advanced.opnsense.alias": "Nome alias",
   "settings.advanced.opnsense.skip_tls": "Ignora verifica TLS (auto-firmato)",
   "settings.advanced.log_title": "Registro dei blocchi permanenti",
+  "settings.advanced.clear_log": "Svuota",
+  "settings.advanced.clear_log_confirm": "Questo eliminerà definitivamente l'intero registro dei blocchi. Fail2ban UI considererà che nessun IP è attualmente bloccato sul firewall esterno.\n\nQuesta azione non può essere annullata. Continuare?",
+  "settings.advanced.clear_log_success": "Registro dei blocchi permanenti svuotato.",
   "settings.advanced.log_empty": "Nessun blocco permanente ancora registrato.",
   "settings.advanced.log_ip": "IP",
   "settings.advanced.log_integration": "Integrazione",
